@@ -6,6 +6,8 @@
 #
 ######################################################################
 
+# PLEX reg key for non-localhost access: disableRemoteSecurity="1"
+
 import sys, logging, argparse, signal
 
 import sageplex.plexlog  # log wrapper for scanner/agent
@@ -16,14 +18,11 @@ import sageplex.spvideo  # parsing sage/plex video obj
 
 import pdb
 
-
-__version__ = '1.0.0.' + '$Revision: #1 $'[12:-2]
-__date__    = '$Date: 2015/04/17 $'[7:-2].replace('/','-')
-
-PROG_NAME   = 'SagePlex Sync'
-PROG_VER    = 'v%s (%s)' % (__version__, __date__)
-
-PROG_NAME_MAIN = PROG_NAME + ' ' + PROG_VER
+PROG_DESC   = ('Compare or synchronize watch status and resume position '
+               'of the specified PLEX library sections with SageTV. '
+               'Individual PLEX Media files can be specified when the '
+               '-m option is used.')
+PROG_USAGE  = ('sageplex_sync.py [options] [id [id ...]]')
 
 LOG_FORMAT = '%(asctime)s| %(levelname)-8s| %(message)s'
 
@@ -55,11 +54,11 @@ class Stat:
     '''keeps track of statistics'''
     def __init__(self):
         self.processed = 0  # number of videos processed
-        self.updated = 0    # number of plex videos updated
+        self.updated = 0    # number of videos updated
         self.insync = 0     # number of videos in sync
-        self.plex = []      # plex video out of sync
-        self.sage = []      # sage video out of sync
-        self.nosage = []    # not in sagetv
+        self.plex = []      # plex videos out of sync
+        self.sage = []      # sage videos out of sync
+        self.nosage = []    # videos not in sagetv
 
     # convert to string
     def __str__(self):
@@ -77,25 +76,42 @@ class Stat:
         return s
 
     def addPlex(self, id, title, p_resume, s_resume):
-        '''add an out of sync plex title to list'''
+        '''add an out of sync plex title to list
+
+        @param id        plex media-id of video
+        @param title     name of video
+        @param p_resume  plex resume position
+        @param s_resume  sage resume position
+        '''
         s = ('[%s] %s (%s vs %s)' %
              (id, title, p_resume, s_resume))
         self.plex.append(s)
 
     def addSage(self, id, title, s_resume, p_resume):
-        '''add an out of sync sage title to list'''
+        '''add an out of sync sage title to list
+
+        @param id        plex media-id of video
+        @param title     name of video
+        @param p_resume  plex resume position
+        @param s_resume  sage resume position
+        '''
         s = ('[%s] %s (%s vs %s)' %
              (id, title, s_resume, p_resume))
         self.sage.append(s)
 
     def addNoSage(self, id, title, p_resume):
-        '''add an not in sage title to list'''
+        '''add an not in sage title to list
+
+        @param id        plex media-id of video
+        @param title     name of video
+        @param p_resume  plex resume position
+        '''
         s = ('[%s] %s (%s)' %
              (id, title, p_resume))
         self.nosage.append(s)
 
     def printSummary(self):
-        '''Output statistics'''
+        '''Print accumulated statistics'''
         # print summary and statistics
         if g_stat.plex:
             print '\nPLEX out of sync:'
@@ -145,12 +161,16 @@ def syncMediaId(args):
 
     @param args  namespace from ArgumentParser.parse_args
     '''
-    path = '/library/metadata/%s' % args.id
-    if args.mode == 'i':
-        print 'Displaying media-id %s: %s' % (args.id, path)
-    else:
-        print 'Syncing media-id %s: %s' % (args.id, path)
-    plexapi.walkPlex(path, None, processVideo)
+    for x in args.id:
+        if not x.isdigit():
+            print 'Must be a PLEX Media-ID number: %s' % x
+            continue
+        path = '/library/metadata/%s' % x
+        if args.sync:
+            print 'Syncing media-id %s: %s' % (x, path)
+        else:
+            print 'Displaying media-id %s: %s' % (x, path)
+        plexapi.walkPlex(path, None, processVideo)
 
 
 def syncSections(args):
@@ -158,19 +178,40 @@ def syncSections(args):
 
     @param args  namespace from ArgumentParser.parse_args
     '''
-    # if section is specified, use it, otherwise sync all sections
+    sections = None
     slist = []
     path = '/library/sections'
-    if args.section:
-        slist.append(args.section)
-    else:
+
+    # if all is specified, get all sections and add to work list
+    if 'all' in args.id:
         sections = plexapi.listSections()
         slist.extend(sections.keys())
-
-    if args.mode == 'i':
-        print 'Sections to display: %s' % slist
     else:
+        # user entered a list of id/names
+        # check if a name is specified
+        namelist = [s for s in args.id if not s.isdigit()]
+        if namelist:
+            sections = plexapi.listSections(byName=True)
+        # now loop through list and add to sections
+        for x in args.id:
+            if x.isdigit():
+                slist.append(x)
+            else:
+                # a name, so we lookup its id
+                section_id = sections.get(x)
+                if section_id:
+                    slist.append(section_id['id'])
+                else:
+                    print 'Section not found: %s' % x
+
+    if not slist:
+        return
+
+    # now do the work
+    if args.sync:
         print 'Sections to sync: %s' % slist
+    else:
+        print 'Sections to display: %s' % slist
 
     for s in slist:
         path = ('/library/sections/%s/all' % s)
@@ -196,19 +237,39 @@ def processVideo(node, log):
     pv = sageplex.spvideo.PlexVideo(node, log)
     print '  %s' % str(pv).encode('ascii', 'ignore'),
     sys.stdout.flush()
+    p_resume = pv.getResume()
+
+    # if set explicit position, do it here before query sage
+    if g_args.position:
+        print '[set to %s]' % g_args.position
+        print '\t  PLEX: %s' % pv.getInfo()
+        if g_args.positionSec == p_resume:
+            print '\t  No change needed, skipping.',
+            return
+        # now update PLEX media
+        if not askUser(None, '\tUpdate media [%s]: %s?' %
+                       (pv.id, pv.title), silent=(not g_args.prompt)):
+            return
+        print '\t  Updating PLEX ... ',
+        sys.stdout.flush()
+        if not g_args.simulate:
+            # Plex seems to ignore starting pos under a minute
+            plexapi.setProgress(pv.id, g_args.positionSec)
+            g_stat.updated += 1
+            print '[done]'
+        else:
+            print '[simulate]'
+        return
 
     # get SagetV information for video file
     mf = sageapi.getMediaFileForName(pv.file)
     # mf = sample_mf()
     if not mf:
-        print '[no Sage]'
+        print '[not in Sage]'
         log.info('file not in SageTV: %s', pv.file)
         g_stat.addNoSage(pv.id, pv.getTitle(), pv.getResumeStr())
         return
     sv = sageplex.spvideo.SageVideo(mf, log)
-
-    # now compare the resume time and decide what to do
-    p_resume = pv.getResume()
     s_resume = sv.getResume()
 
     # if in sync (or both 0), no changes needed
@@ -245,14 +306,16 @@ def processVideo(node, log):
         print '\t  PLEX: %s' % pv.getInfo()
         print '\t  Sage: %s' % sv
         # if info mode, done
-        if g_args.mode == 'i':
+        if not g_args.sync:
             return
-        # else update
-        # TODO: prompt user if requested
+        # now update PLEX media
+        if not askUser(None, '\tUpdate media [%s]: %s?' %
+                       (pv.id, pv.title), silent=(not g_args.prompt)):
+            return
         print '\t  Updating PLEX ... ',
         sys.stdout.flush()
         if not g_args.simulate:
-            # TODO: plex seems to not set anything under a minute?
+            # Plex seems to ignore starting pos under a minute
             plexapi.setProgress(pv.id, s_resume)
             g_stat.updated += 1
             print '[done]'
@@ -260,13 +323,54 @@ def processVideo(node, log):
             print '[simulate]'
 
 
+def askUser(msg, prompt, default='n', silentDefault='y', silent=False):
+    '''Ask the user a question
+
+    @msg            message/text to display to the user
+    @prompt         text for prompt
+    @default        if user did not supply an answer
+    @silentDefault  default if running in silent mode
+    @silent         are we in silent mode
+    '''
+    if silent:
+        default = silentDefault
+    prompt += ' (y/n [%s]) ' % default
+
+    if not silent:
+        if msg:
+            print msg
+        answer = raw_input(prompt).strip()
+        if not answer:
+            answer = default
+    else:
+        answer = default
+
+    if (answer.lower() != 'y'):
+        return False
+    else:
+        return True
+
+
 def mainSync(args):
     '''Sync/Display the PLEX library sections
 
     @param args  namespace from ArgumentParser.parse_args
     '''
-    # check if a id is specified
-    if args.id:
+    # this should not happen
+    if not args.id:
+        return
+
+    # if user explicitly specified resume position
+    if args.position:
+        # prompt for confirmation
+        msg = ('You have specified an explicit resume position: %s\n'
+               'This will override resume position for all videos specified!\n' %
+               args.position)
+        if not askUser(msg, 'Are you sure you want to continue?'):
+            return
+
+    # are we syncing individual media
+    if args.media:
         syncMediaId(args)
     else:
         syncSections(args)
@@ -285,82 +389,121 @@ def parseArgs():
     @return  namespace from ArgumentParser.parse_args
     '''
     # add the parent parser
-    parser = argparse.ArgumentParser(description = PROG_NAME_MAIN)
+    parser = argparse.ArgumentParser(epilog = PROG_DESC,
+                                     usage = PROG_USAGE,
+                                     formatter_class = argparse.ArgumentDefaultsHelpFormatter)
 
-    # create a set of subcommand parsers
-    subparsers = parser.add_subparsers(help='command (-h for more help)',
-                                       dest='mode')
+    # list or sync can't be both used
+    group = parser.add_mutually_exclusive_group()
+    group.add_argument('-l', '--list',
+                        help='list PLEX library sections',
+                        action='store_true')
+    group.add_argument('-s', '--sync',
+                        help='sync watch status',
+                        action='store_true')
 
-    # list PLEX libraries
-    parser_c = subparsers.add_parser('l', help='list PLEX library sections')
+    # rest of parameters
+    parser.add_argument('-m', '--media',
+                        help='ID is media-id, not section-id',
+                        action='store_true')
+    parser.add_argument('--position',
+                        help='Set explicit resume position (h:m:s)',
+                        default=None)
+    parser.add_argument('-x', dest='ignore', type=int,
+                        help='ignore if pos within initial x seconds',
+                        default=60)
+    parser.add_argument('-p', dest='prompt',
+                        help='confirm each update',
+                        action='store_true')
+    parser.add_argument('-n', dest='simulate',
+                        help='do nothing, simulate operation',
+                        action='store_true')
 
-    # display PLEX/SageTV libraries
-    parser_e = subparsers.add_parser('i', help='show library watch status')
-    parser_e.add_argument('-c', dest='section',
-                          help='A PLEX library section ID',
-                          default=None)
-    parser_e.add_argument('-m', dest='id',
-                          help='A PLEX media ID',
-                          default=None)
-    parser_e.add_argument('-x', dest='ignore', type=int,
-                          help='ignore if resume pos within initial x seconds [60]',
-                          default=60)
+    # 0 or more IDs to operate on, this could be library section id
+    # or media id.
+    parser.add_argument('id', nargs='*',
+                        help='PLEX library ID/name/all',
+                        default=None)
 
-    # sync PLEX/SageTV libraries
-    parser_e = subparsers.add_parser('s', help='sync library watch status')
-    parser_e.add_argument('-c', dest='section',
-                          help='A PLEX library section ID',
-                          default=None)
-    parser_e.add_argument('-m', dest='id',
-                          help='A PLEX media ID',
-                          default=None)
-    parser_e.add_argument('-x', dest='ignore', type=int,
-                          help='ignore if resume pos within initial x seconds [60]',
-                          default=60)
-    parser_e.add_argument('-p', dest='prompt',
-                          help='confirm each update',
-                          action='store_true')
-    parser_e.add_argument('-n', dest='simulate',
-                          help='do nothing, simulate operation',
-                          action='store_true')
+    # parse the arguments
+    args = parser.parse_args()
+    # print args
 
-    # return the parsed namespace
-    return parser.parse_args()
+    # do some sanity check on parameters
+    if args.position:
+        # must be in media-id mode, not section mode
+        if not args.media:
+            print 'Error: must use individual Media-ID (-m) for explicit resume position!'
+            return
+        # must be in sync mode
+        if not args.sync:
+            print 'Sync mode (-s) is required for explicit resume position!'
+            return
+        # should be in h:m:s format
+        t = args.position.split(':')
+        if len(t) > 3:
+            print 'Invalid resume position: format error: %s' % args.position
+            return
+        # check and convert time to seconds
+        s = 0
+        i = 0
+        for x in reversed(t):
+            if not x.isdigit():
+                print 'Invalid resume position: non digit: %s' % args.position
+                return
+            s += int(x) * (60**i)
+            i += 1
+        args.positionSec = s * 1000  # in ms
+
+    # any work to do?
+    if args.list or args.id:
+        return args
+    else:
+        parser.print_help()
 
 
 def main():
     '''Main entrypoint'''
     global mycfg, mylog, sageapi, plexapi
     global g_args, g_stat
+
     # parse arguments
     args = parseArgs()
+    if not args:
+        return
     g_args = args
-    # do the actions
-    if args.mode in ['l', 'i', 's']:
-        # parameter is OK, initialize logs/config object to do work
-        logging.basicConfig(format=LOG_FORMAT, level=logging.DEBUG,
-                            filename='sageplex_sync.log')
-        mylog = sageplex.plexlog.PlexLog()  # log wrapper
-        mylog.info('***** Entering SagePlex Sync *****')
 
-        # create cfg/sage/plex global objects
-        mycfg = sageplex.config.Config(sys.platform)
-        sageapi = sageplex.sagex.SageX(mycfg.getSagexHost())
-        plexapi = sageplex.plexapi.PlexApi(mycfg.getPlexHost())
+    # parameter is OK, initialize logs/config object
+    logging.basicConfig(format=LOG_FORMAT, level=logging.DEBUG,
+                        filename='sageplex_sync.log')
+    mylog = sageplex.plexlog.PlexLog()  # log wrapper
+    mylog.info('***** Entering SagePlex Sync *****')
 
-        # register our ctrol-c handler to gracefully exit.
-        mylog.info('registering SIGINT handler ...')
-        signal.signal(signal.SIGINT, signal_handler)
+    # create cfg/sage/plex global objects
+    mycfg = sageplex.config.Config(sys.platform)
 
-        # now do the work
-        g_stat = Stat()
-        if args.mode == 'l':
-            mainList(args)
-        elif args.mode == 's' or args.mode == 'i':
-            mainSync(args)
-        mylog.info('')  # done, write empty line so we have good separator for next time
+    # check cfg file is read correctly
+    if not mycfg.getPlexHost():
+        print 'PLEX host is not defined!\nCheck sageplex_cfg.json to ensure it is valid.\nCheck sageplex_sync.log for additional details.'
+        return
+    if not mycfg.getSagexHost():
+        print 'SageX host is not defined!\nCheck sageplex_cfg.json to ensure it is valid.\nCheck sageplex_sync.log for additional details.'
+        return
+
+    sageapi = sageplex.sagex.SageX(mycfg.getSagexHost())
+    plexapi = sageplex.plexapi.PlexApi(mycfg.getPlexHost())
+
+    # register our ctrol-c handler to gracefully exit.
+    mylog.info('registering SIGINT handler ...')
+    signal.signal(signal.SIGINT, signal_handler)
+
+    # now do the work
+    g_stat = Stat()
+    if args.list:
+        mainList(args)
     else:
-        parser.print_help()
+        mainSync(args)
+        mylog.info('')  # done, write empty line so we have good separator for next time
 
 
 if __name__ == '__main__':
